@@ -7,68 +7,22 @@
   </component>
   <component name="ChangeListManager">
     <list default="true" id="351e7919-2d3b-43af-9078-aedc18c98eec" name="Default Changelist" comment="">
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/images/kuowen1.jpeg" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/images/kuowen1c.jpeg" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/images/kuowen2.jpg" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/images/kuowen3.jpg" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/images/kuowen4.jpg" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/images/longan.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/images/map.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/images/thinking.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/images/urn.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/1_2.json" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/4_1.json" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/1_1.json" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/4_1.json" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.gradle/5.2.1/executionHistory/executionHistory.bin" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/5.2.1/executionHistory/executionHistory.bin" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.gradle/5.2.1/executionHistory/executionHistory.lock" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/5.2.1/executionHistory/executionHistory.lock" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/.gradle/5.2.1/fileContent/fileContent.lock" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/5.2.1/fileContent/fileContent.lock" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.gradle/5.2.1/fileHashes/fileHashes.bin" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/5.2.1/fileHashes/fileHashes.bin" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.gradle/5.2.1/fileHashes/fileHashes.lock" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/5.2.1/fileHashes/fileHashes.lock" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.gradle/5.2.1/javaCompile/classAnalysis.bin" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/5.2.1/javaCompile/classAnalysis.bin" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.gradle/5.2.1/javaCompile/javaCompile.lock" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/5.2.1/javaCompile/javaCompile.lock" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.gradle/5.2.1/javaCompile/taskHistory.bin" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/5.2.1/javaCompile/taskHistory.bin" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.gradle/buildOutputCleanup/buildOutputCleanup.lock" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/buildOutputCleanup/buildOutputCleanup.lock" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/.gradle/buildOutputCleanup/outputFiles.bin" beforeDir="false" afterPath="$PROJECT_DIR$/.gradle/buildOutputCleanup/outputFiles.bin" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/core/WorkTable.class" beforeDir="false" afterPath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/core/WorkTable.class" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/frame/FrameCoral.class" beforeDir="false" afterPath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/frame/FrameCoral.class" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/panel/PanelTitle$1.class" beforeDir="false" afterPath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/panel/PanelTitle$1.class" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/panel/PanelTitle.class" beforeDir="false" afterPath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/panel/PanelTitle.class" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/util/FontRef.class" beforeDir="false" afterPath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/util/FontRef.class" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/util/Reference.class" beforeDir="false" afterPath="$PROJECT_DIR$/build/classes/java/main/com/fieryslug/reinforcedcoral/util/Reference.class" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/resources/main/res/problems/1/chembio/3.json" beforeDir="false" afterPath="$PROJECT_DIR$/build/resources/main/res/problems/1/chembio/3.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/resources/main/res/problems/1/physmath/3.json" beforeDir="false" afterPath="$PROJECT_DIR$/build/resources/main/res/problems/1/physmath/3.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/resources/main/res/problems/1/physmath/5.json" beforeDir="false" afterPath="$PROJECT_DIR$/build/resources/main/res/problems/1/physmath/5.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/resources/main/res/problems/1/physmath/6.json" beforeDir="false" afterPath="$PROJECT_DIR$/build/resources/main/res/problems/1/physmath/6.json" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/build/resources/main/res/problems/1/socio/1.json" beforeDir="false" afterPath="$PROJECT_DIR$/build/resources/main/res/problems/1/socio/1.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/resources/main/res/problems/1/socio/2.json" beforeDir="false" afterPath="$PROJECT_DIR$/build/resources/main/res/problems/1/socio/2.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/build/resources/main/res/problems/1/socio/3.json" beforeDir="false" afterPath="$PROJECT_DIR$/build/resources/main/res/problems/1/socio/3.json" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/changelog.txt" beforeDir="false" afterPath="$PROJECT_DIR$/changelog.txt" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/core/WorkTable.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/core/WorkTable.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/frame/FrameCoral.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/frame/FrameCoral.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/panel/PanelSettings.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/panel/PanelSettings.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/panel/PanelTitle.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/panel/PanelTitle.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/FontRef.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/FontRef.java" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/Reference.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/Reference.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/2_1.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/2_1.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/3.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/3.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/5.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/5.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/6_1.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/6_1.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/2.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/2.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/3.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/3.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/4.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/4.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/5.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/5.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/6.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/6.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/1_1.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/1_1.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/2_1.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/2_1.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/3.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/3.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/5.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/5.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/6.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/6.json" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/1.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/1.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/2.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/2.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/3.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/3.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/4.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/4.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/5.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/5.json" afterDir="false" />
     </list>
     <option name="EXCLUDED_CONVERTED_TO_IGNORED" value="true" />
     <option name="SHOW_DIALOG" value="false" />
@@ -326,6 +280,7 @@
       <workItem from="1565142507462" duration="1326000" />
       <workItem from="1565146335858" duration="772000" />
       <workItem from="1565150256860" duration="19617000" />
+      <workItem from="1565173317117" duration="3793000" />
     </task>
     <servers />
   </component>
