@@ -23,7 +23,7 @@
       "type": -1,
       "res": [
         "鐵梨與鯊魚 (250pt)",
-        "下列敘述何者正確?\n(A)農夫吉姆在歌詞中重複了四次魚顯示了他對於的熱愛\n(B)拿鐵犁撈大魚的行為符合資源重複利用與永續發展的精神\n(C)活用歌詞中所學會的工具捕魚是知識經濟的展現\n(D)虎紋鯊魚是瀕臨絕種的生物，需要你我共同努力進行保育工作"
+        "下列敘述何者不正確?\n(A)農夫吉姆在歌詞中重複了四次魚顯示了他對於的熱愛\n(B)拿鐵犁撈大魚的行為符合資源重複利用與永續發展的精神\n(C)活用歌詞中所學會的工具捕魚是知識經濟的展現\n(D)虎紋鯊魚是瀕臨絕種的生物，需要你我共同努力進行保育工作"
       ]
     }
   ],
@@ -45,7 +45,7 @@
       {
         "widget": "jtextarea",
         "constraints": "1, 5, 18, 16",
-        "content": "下列敘述何者正確?\n(A)農夫吉姆在歌詞中重複了四次魚顯示了他對於的熱愛\n(B)拿鐵犁撈大魚的行為符合資源重複利用與永續發展的精神\n(C)活用歌詞中所學會的工具捕魚是知識經濟的展現\n(D)虎紋鯊魚是瀕臨絕種的生物，需要你我共同努力進行保育工作",
+        "content": "下列敘述何者不正確?\n(A)農夫吉姆在歌詞中重複了四次魚顯示了他對於的熱愛\n(B)拿鐵犁撈大魚的行為符合資源重複利用與永續發展的精神\n(C)活用歌詞中所學會的工具捕魚是知識經濟的展現\n(D)虎紋鯊魚是瀕臨絕種的生物，需要你我共同努力進行保育工作",
         "properties": {
           "textsize": "30",
           "textsizefull": "45"
