@@ -7,7 +7,7 @@ import java.awt.*;
 public class Reference {
 
     public static final String PROJECT_NAME = "Project Reinforced Coral";
-    public static final String VERSION = "gradle_2.2";
+    public static final String VERSION = "gradle_3.0";
     //public static final String
 
     public static final int MAGIC_PRIME = 62;
